updated according to review. handling null values

--- a/stackoverflow_survey_analysis.ipynb
+++ b/stackoverflow_survey_analysis.ipynb
@@ -539,13 +539,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get required columns and renaming for same naming convention. Remove rows if had no salary info.\n",
+    "# Get required columns and renaming for same naming convention.\n",
     "df2021 = df2021[['EdLevel','YearsCodebinned','OrgSize','CompTotal','ConvertedCompYearly','CompFreq','Age','Gender','DevType','Country','Employment','MainBranch','LanguageHaveWorkedWith','DatabaseHaveWorkedWith','PlatformHaveWorkedWith','WebframeHaveWorkedWith','SurveyYear']].rename(columns={'Agebinned': 'Age','YearsCodebinned':'YearsCode','LanguageHaveWorkedWith': 'LanguageWorkedWith','DatabaseHaveWorkedWith': 'DatabaseWorkedWith','PlatformHaveWorkedWith': 'PlatformWorkedWith','WebframeHaveWorkedWith': 'WebframeWorkedWith', 'ConvertedCompYearly':'ConvertedComp'})\n",
     "df2020 = df2020[['EdLevel','Agebinned','CompFreq','CompTotal','ConvertedComp','Country','Employment','Gender','DevType','YearsCodebinned','OrgSize','MainBranch','LanguageWorkedWith','DatabaseWorkedWith','PlatformWorkedWith','WebframeWorkedWith','SurveyYear']].rename(columns={'Agebinned': 'Age','YearsCodebinned':'YearsCode'})\n",
     "df2019 = df2019[['EdLevel','Agebinned','CompFreq','CompTotal','ConvertedComp','Country','Employment','Gender','DevType','YearsCodebinned','OrgSize','MainBranch','LanguageWorkedWith','DatabaseWorkedWith','PlatformWorkedWith','WebFrameWorkedWith','SurveyYear']].rename(columns={'Agebinned': 'Age','WebFrameWorkedWith': 'WebframeWorkedWith','YearsCodebinned':'YearsCode'})\n",
     "\n",
     "# Combine survey results\n",
     "df = pd.concat([df2021,df2020,df2019])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aafb3f41",
+   "metadata": {},
+   "source": [
+    "Null values will be handled later inside of the functions so data size will not be reduced unneccesarily.\n",
+    "Eg. if we remove all rows have no salary, this will reduce tool preference data size without a reason. \n",
+    "In tool preferences questions, Count() function will not count null values so we won't need to remove null values.\n",
+    "In salary analysis questions, we'll only remove null 'ConvertedComp' values when we pass the dataframe variable to function "
    ]
   },
   {
